k8s/v9/v9-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osf-v9-web
  namespace: osf
  labels:
    app: osf-v9-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osf-v9-web
  template:
    metadata:
      labels:
        app: osf-v9-web
    spec:
      containers:
        - name: nginx
          image: 192.168.178.150:32000/osf-v9-web:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: osf-v9-web
  namespace: osf
  labels:
    app: osf-v9-web
spec:
  type: NodePort
  selector:
    app: osf-v9-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30909
      protocol: TCP
